<resources>
    <string name="app_name">Sierre Blues Festival</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="demo_data">Demo Data</string>
    <string name="acts">Acts</string>
    <string name="scenes">Scenes</string>
    <string name="icon_description">Application Icon</string>
    <string name="image_background">Background Image</string>
    <string name="title_main">Login Page</string>
    <string name="title_about">About</string>
    <string name="title_acts">Acts</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_scenes">Scenes</string>
    <string name="title_settings">Settings</string>
    <string name="title_welcome">Welcome Page</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_edit_act">Edit Act</string>
    <string name="title_edit_stage">Edit Stage</string>
    <string name="timetable_friday_label">Friday, June 13</string>
    <string name="timetable_saturday_label">Saturday, June 14</string>
    <string name="timetable_sunday_label">Sunday, June 15</string>
    <string name="dash"> - </string>
    <string name="alert_demo_data">Reload demo data</string>
    <string name="alert_demo_data_text">Are you sure you want to erase all data and replace them with demo data?</string>
    <string name="action_reset">Reset data</string>
    <string name="demo_data_initiated">Demo data has been initialized.</string>
    <string name="action_cancel">Cancel</string>
    <string name="message_delete_edit">Long press to Edit or Delete</string>
    <string name="alert_edit_delete">Edit / Delete entry?</string>
    <string name="act_edit_text_name">Artist</string>
    <string name="artist_name">Artist Name:</string>
    <string name="artist_country">Artist Country:</string>
    <string name="act_edit_artist_country">Country</string>
    <string name="artist_genre">Genre:</string>
    <string name="act_edit_text_genre">Genre</string>
    <string name="artist_date">Date:</string>
    <string name="act_edit_datetime">Date</string>
    <string name="artist_start_time">Start Time:</string>
    <string name="act_edit_start_time">Start Time</string>
    <string name="artist_price">Price:</string>
    <string name="act_edit_price">Price</string>
    <string name="artist_website">Website:</string>
    <string name="act_edit_website">URL</string>
    <string name="artist_stage">Stage:</string>
    <string name="act_edit_stage">Stage</string>
    <string name="act_delete">Delete</string>
    <string name="act_save">Save</string>
    <string name="act_cancel">Cancel</string>
    <string name="recycler_title">Title</string>
    <string name="recycler_date_address">Date or address</string>
    <string name="recycler_scene_duration">Scene name or duration</string>
    <string name="stage_name">Name</string>
    <string name="stage_location">Location</string>
    <string name="stage_capacity">Capacity</string>
    <string name="stage_places">Places</string>
    <string name="about_text">This application was made by Jean-Marie Alder and Alexandre Schweizer for the module 644-1 Mobile and Cloud Computing.</string>



    <string-array name="acts_list">
        <item>Act1</item>
        <item>Act2</item>
        <item>Act3</item>
        <item>Act4</item>
        <item>Act5</item>
        <item>Act6</item>
        <item>Act7</item>
        <item>Act8</item>
        <item>Act9</item>
        <item>Act10</item>
        <item>Act11</item>
        <item>Act12</item>
        <item>Act13</item>
        <item>Act14</item>
        <item>Act15</item>
        <item>Act16</item>
    </string-array>
    <string-array name="scenes_list">
        <item>Scene1</item>
        <item>Scene2</item>
        <item>Scene3</item>
        <item>Scene4</item>
        <item>Scene5</item>
        <item>Scene6</item>
        <item>Scene7</item>
        <item>Scene8</item>
        <item>Scene9</item>
        <item>Scene10</item>
        <item>Scene11</item>
        <item>Scene13</item>
        <item>Scene12</item>
        <item>Scene14</item>
        <item>Scene15</item>
        <item>Scene16</item>
    </string-array>
    <string-array name="dates">
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="icon_add">Add</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_language">Language</string>
    <string name="pref_description_language">Choose the app language
    </string>
    <string-array name="pref_list_language">
        <item>English</item>
        <item>Français</item>
    </string-array>
    <string-array name="pref_values_language">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_lightweight_mode">Lightweight mode</string>
    <string name="pref_description_lightweight_mode">Enable this setting to disable images and videos</string>

    <!--<string name="pref_title_theme">Theme</string>-->
    <!--<string name="pref_description_theme">Choose which theme is applied to this app</string>-->
    <!--<string-array name="pref_list_theme">-->
        <!--<item>Light</item>-->
        <!--<item>Dark</item>-->
    <!--</string-array>-->
    <!--<string-array name="pref_values_theme">-->
        <!--<item>1</item>-->
        <!--<item>2</item>-->
    <!--</string-array>-->

    <string name="pref_title_switch_theme">Theme</string>
    <string name="pref_description_switch">Slide to enable dark theme</string>


</resources>
