<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_list_language"
        android:entryValues="@array/pref_values_language"
        android:key="pref_key_language"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/pref_description_language"
        android:title="@string/pref_title_language" />

        <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_key_lightweight_mode"
        android:summary="@string/pref_description_lightweight_mode"
        android:title="@string/pref_title_lightweight_mode" />

    <!--<ListPreference-->
        <!--android:defaultValue="1"-->
        <!--android:entries="@array/pref_list_theme"-->
        <!--android:entryValues="@array/pref_values_theme"-->
        <!--android:key="pref_key_theme"-->
        <!--android:summary="@string/pref_description_theme"-->
        <!--android:title="@string/pref_title_theme" />-->

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_key_switch"
        android:summary="@string/pref_description_switch"
        android:title="@string/pref_title_switch_theme" />

</PreferenceScreen>
